# stock-closing-prices-in-range

./: nb.ipynb  pyproject.toml
